[package]
name = "animated-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
# Terminal UI
crossterm = "0.27.0"
ratatui = "0.29"
tachyonfx = "0.7"

# Video processing
ffmpeg-next = { version = "7.1", features = ["build"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client for AI APIs
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Error handling
anyhow = "1.0"

# CLI parsing
clap = { version = "4", features = ["derive"] }

# Environment variables
dotenvy = "0.15"

# Threading utilities
crossbeam-channel = "0.5"
